oldfiles/deploymentpod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: deploywala
spec:
  replicas: 4
  selector: 
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
         - image: nginx
           name: ngcontainer
           ports:
            - containerPort: 80
