oldfiles/persiclaimpod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: myngpod
  labels:
     app: nginx

spec:
 
  containers:
    - image: nginx
      name: myngcont
      ports:
        - containerPort: 80
          hostPort: 80
      volumeMounts:
        - name: htmlfolder
          mountPath: /usr/share/nginx/html  
  volumes:
    - name: htmlfolder
      persistentVolumeClaim:
         claimName: pvclaim
