oldfiles/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingresswala
spec:
  tls:
    - hosts:
       - oleoleapp.in
      secretName: mytlssecret
  rules:
    - host: oleoleapp.in  
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: service1
              port:
                number: 443
